--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,21 @@
 .example-label {
   display: table-cell;
   font-size: 14px;
-  margin-left: 8px;
+  margin: 20px;
   min-width: 120px;
 }
 
 .example-button-row {
   display: flex;
   gap: 10px;
+}
+.example-radio-group {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  align-items: flex-start;
+}
+
+.example-radio-button {
+  margin: 5px;
 }
