--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,6 @@
+.mat-tab{
+  margin: 20px;
+}
 .example-label {
   display: table-cell;
   font-size: 14px;
@@ -18,4 +21,12 @@
 
 .example-radio-button {
   margin: 5px;
+}
+
+.example-form-field {
+  width: 200px;
+}
+
+table {
+  width: 100%;
 }
