--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,17 @@
       </div>
     </section>
     <hr>
+    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
+    <mat-icon aria-hidden="false" aria-label="Example favorite icon" fontIcon="favorite"></mat-icon>
+    <mat-icon aria-hidden="false" aria-label="Example add icon" fontIcon="add"></mat-icon>
+    <hr>
+    <div class="section-badge">
+      <div matBadge="4" matBadgeOverlap="false" class="demo-section">Text with a badge</div>
+
+      <div matBadge="1" matBadgeSize="large" class="demo-section">Text with large badge</div>
+    </div>
+
+    <hr>
     <label id="example-radio-group-label">Pick your favorite season</label>
     <mat-radio-group
       aria-labelledby="example-radio-group-label"
@@ -93,5 +104,40 @@
       </div>
     </div>
 
+  </mat-tab>
+
+  <mat-tab label="Accordion">
+    <cdk-accordion class="example-accordion">
+      <cdk-accordion-item
+        *ngFor="let item of items; let index = index;"
+        #accordionItem="cdkAccordionItem"
+        class="example-accordion-item"
+        role="button"
+        tabindex="0"
+        [attr.id]="'accordion-header-' + index"
+        [attr.aria-expanded]="accordionItem.expanded"
+        [attr.aria-controls]="'accordion-body-' + index">
+        <div class="example-accordion-item-header" (click)="accordionItem.toggle()">
+          {{ item }}
+          <span class="example-accordion-item-description">
+        Click to {{ accordionItem.expanded ? 'close' : 'open' }}
+      </span>
+        </div>
+        <div
+          class="example-accordion-item-body"
+          role="region"
+          [style.display]="accordionItem.expanded ? '' : 'none'"
+          [attr.id]="'accordion-body-' + index"
+          [attr.aria-labelledby]="'accordion-header-' + index">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis
+          excepturi incidunt ipsum deleniti labore, tempore non nam doloribus blanditiis
+          veritatis illo autem iure aliquid ullam rem tenetur deserunt velit culpa?
+        </div>
+      </cdk-accordion-item>
+    </cdk-accordion>
+  </mat-tab>
+
+  <mat-tab label="Dialog">
+    <app-first-companion></app-first-companion>
   </mat-tab>
 </mat-tab-group>
