mat-dialog/add dialog-second

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -139,5 +139,6 @@
 
   <mat-tab label="Dialog">
     <app-first-companion></app-first-companion>
+    <app-first-companion-dialog-second></app-first-companion-dialog-second>
   </mat-tab>
 </mat-tab-group>
